@@ -1428,7 +1428,7 @@ class Contract:
             'premium': None,
             'amount': 0,
             'tax_amount': 0,
-            'fees': 0,
+            'fee': 0,
             'total_amount': 0,
             'details': [],
             }
@@ -1466,15 +1466,17 @@ class Contract:
                     'premium': premium,
                     'currency_digits': invoice.currency.digits,
                     'currency_symbol': invoice.currency.symbol,
-                    'amount': amount,
+                    'amount': amount if not premium.fee else 0,
+                    'fee': amount if premium.fee else 0,
                     'tax_amount': tax_amount,
                     'total_amount': amount + tax_amount,
                     })
-            displayer['amount'] += amount
             displayer['tax_amount'] += tax_amount
             displayer['total_amount'] += amount + tax_amount
             if premium.fee:
-                displayer['fees'] += amount
+                displayer['fee'] += amount
+            else:
+                displayer['amount'] += amount
     ###########################################################################
     # End calculation cache                                                   #
     ###########################################################################
