@@ -574,6 +574,7 @@ class ModuleTestCase(test_framework.CoogTestCase):
                             'name': 'Coverage A',
                             'premium': 10,
                             'start': datetime.date(2017, 1, 20),
+                            'fee': 0,
                             'tax_amount': Decimal('0.00'),
                             'total_amount': Decimal('31.53')},
                         {'amount': Decimal('20.22'),
@@ -583,6 +584,7 @@ class ModuleTestCase(test_framework.CoogTestCase):
                             'name': 'Coverage B',
                             'premium': 11,
                             'start': datetime.date(2017, 1, 20),
+                            'fee': 0,
                             'tax_amount': Decimal('1.82'),
                             'total_amount': Decimal('22.04')}],
                     'end': datetime.date(2017, 2, 19),
@@ -590,7 +592,7 @@ class ModuleTestCase(test_framework.CoogTestCase):
                     'premium': None,
                     'start': datetime.date(2017, 1, 20),
                     'tax_amount': Decimal('1.82'),
-                    'fees': 0,
+                    'fee': 0,
                     'total_amount': Decimal('53.57')},
                 {'amount': Decimal('39.47'),
                     'currency_digits': 2,
@@ -602,6 +604,7 @@ class ModuleTestCase(test_framework.CoogTestCase):
                             'name': 'Coverage A',
                             'premium': 10,
                             'start': datetime.date(2017, 2, 20),
+                            'fee': 0,
                             'tax_amount': Decimal('0.00'),
                             'total_amount': Decimal('31.53')},
                         {'amount': Decimal('7.94'),
@@ -610,6 +613,7 @@ class ModuleTestCase(test_framework.CoogTestCase):
                             'end': datetime.date(2017, 3, 2),
                             'name': 'Coverage B',
                             'premium': 11,
+                            'fee': 0,
                             'start': datetime.date(2017, 2, 20),
                             # This tax amount may be confusing, but it is
                             # right. The product is configured taxes included,
@@ -623,7 +627,7 @@ class ModuleTestCase(test_framework.CoogTestCase):
                     'premium': None,
                     'start': datetime.date(2017, 2, 20),
                     'tax_amount': Decimal('0.72'),
-                    'fees': 0,
+                    'fee': 0,
                     'total_amount': Decimal('40.19')},
                 ],
             'premium_ids': [10, 11],
