@@ -14,6 +14,8 @@ this repository contains the full copyright notices and license terms. -->
     <field name="amount"/>
     <label name="tax_amount"/>
     <field name="tax_amount"/>
+    <label name="fee"/>
+    <field name="fee"/>
     <label name="total_amount"/>
     <field name="total_amount"/>
 </form>
