@@ -1,3 +1,4 @@
+* BUG#6600 Affichage des frais dans la visualisation de l'échéancier
 * Affichage des totaux de prime dans la visualisation de l'échéancier
 
 Version 1.12 - 2017-04-28
