@@ -1,3 +1,4 @@
+* BUG#6600 Display fees in premium amounts preview
 * Display premium totals in the premium amounts preview
 
 Version 1.12 - 2017-04-28
